fix: add missing unit for `border-spacing`

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -475,7 +475,7 @@ img {
 
 
 table {
-  border-spacing: 1;
+  border-spacing: 1px;
   border-collapse: collapse;
   background: white;
   /* border-radius: 10px; */
